# fifth-tower-tauri

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json
crate/assitant-model/: Cargo.toml
crate/assitant-model/src/: key_value.rs  lib.rs  record.rs  script.rs
crate/flow/: Cargo.toml
crate/flow-model/: Cargo.toml
crate/flow-model-upgrade/: Cargo.toml
crate/flow-model-upgrade/src/: action.rs  action_config.rs  action_update.rs  actions.rs  flow.rs  lib.rs  log.rs  record.rs  rect.rs  upgrade.rs
crate/flow-model-upgrade/src/action_attr/: image_click.rs  key_combi.rs  mod.rs
crate/flow-model-upgrade/src/store/: record.rs
crate/flow-model/src/: action_command.rs  action_policy.rs  app.rs  custom_action.rs  lib.rs  match_method.rs  model.rs
crate/flow-model/src/action_attr/: scroll.rs
crate/flow/src/: dir.rs  executor.rs  flow.rs  lib.rs  recording.rs  resource.rs  window.rs
crate/flow/src/store/: mod.rs  record.rs  script.rs
crate/flow/src/util/: enigo.rs  flow.rs  image_match.rs  mod.rs
crate/flow/src/worker/: guaguale.rs  image_click.rs  input_text.rs  key_combi.rs  mod.rs  mouse_click.rs  mouse_move.rs  mouse_scroll.rs
crate/flow/src/worker/custom/: custom_worker.rs  go_to_see.rs  mod.rs  of.rs  resize_window.rs
crate/recorder-util/: Cargo.toml
crate/recorder-util/src/: guaguale.rs  lib.rs  main.rs  model.rs  scroll.rs
crate/recorder-util/src/image/: mod.rs  model.rs  recorder.rs
src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: dict.rs  mod.rs  script.rs  transfer_resp.rs
src-tauri/src/command/: auth.rs  http.rs  instance.rs  mod.rs  public.rs  record.rs  record_manager.rs  script.rs  store.rs  user_info.rs  vip_check.rs  window.rs
src-tauri/src/command/recorder/: action_recorder.rs  guaguale_command.rs  image_command.rs  input_command.rs  key_combi_command.rs  mod.rs  move_command.rs  scroll_command.rs
src-tauri/src/common/: function.rs  mod.rs  store.rs  token.rs  util.rs
