[package]
name = "tauri-ui"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos.workspace = true
console_error_panic_hook.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crate/*", "src-tauri"]

[workspace.dependencies]
tauri-plugin-http = { version = "2.4", features = ["multipart", "stream"] }
tauri = { version = "2" }
tauri-plugin = { version = "2.1.0", features = ["build"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2.2.0"

tracing = "0.1"
tracing-subscriber = "0.3"
tao = "*"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
multimap = "0.10.0"
codee = { version = "0.3", features = ["bincode_serde"] }
base64 = "0.22"
bitflags = "2"
bytes = "1"

flow = { path = "./crate/flow" }
recorder-util = { path = "./crate/recorder-util" }
flow-model = { path = "./crate/flow-model" }
assitant-model = { path = "./crate/assitant-model" }

tower = { path = "../fifth-tower" }

image = "0.25.5"
imageproc = "0.25.0"
xcap = "0.6"
fs_extra = "1.3.0"
enigo = { version = "0.3.0", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
rand = "0.9"
paste = "1.0.14"

leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_icons = { version = "0.5" }
leptos-use = { version = "0.15.8", features = ["watch_debounced"] }
icondata = { version = "0.5", default-features = false, features = [
    "ant-design-icons",
] }
icondata_core.version = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

reqwest = { version = "0.12" }
send_wrapper = "0.6.0"

zip = "3.0.0"
dirs = "6"
getrandom = { version = "0.3", features = ["wasm_js"] }

matchbox_socket = "0.12"
futures = { version = "0.3", default-features = false }
futures-timer = { version = "3", features = ["wasm-bindgen"] }
