[package]
name = "tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri-plugin-opener.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-global-shortcut.workspace = true
tauri-plugin-store.workspace = true

tauri-plugin-http = { workspace = true, features = ["multipart", "stream"] }
tauri = { workspace = true, features = ["protocol-asset", "devtools"] }
tower = { workspace = true, features = [
    "web",
    "common-rs",
    "jwt",
    "config-client",
    "tauri-model",
    "script-model",
    # "dev",
] }

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

enigo.workspace = true

xcap.workspace = true
flow.workspace = true
flow-model.workspace = true
recorder-util.workspace = true
multimap.workspace = true
fs_extra.workspace = true
codee.workspace = true
base64.workspace = true
bytes.workspace = true
getrandom.workspace = true
paste.workspace = true


tokio = { workspace = true, features = ["time", "rt", "rt-multi-thread"] }
image.workspace = true
assitant-model.workspace = true
