[package]
name = "flow"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["time", "rt", "rt-multi-thread"] }
image.workspace = true
imageproc.workspace = true
xcap.workspace = true
fs_extra.workspace = true
enigo.workspace = true
flow-model.workspace = true
tracing.workspace = true
serde.workspace = true
tauri = { workspace = true, features = [] }
rand.workspace = true
zip.workspace = true
multimap.workspace = true
tower = { workspace = true, features = ["zip", "enigo"] }

[dev-dependencies]
tracing-subscriber.workspace = true
dirs.workspace = true
